@@ -5,6 +5,9 @@ ant4c (YYYY.MM)
     of data while calculating hash sum of first one.
   * Added 'operating-system::is-windows-server' and
     'platform::is-windows-server' functions.
+  * WIN32: fixed using at 'echo' task for scenario when output stream
+    redirected to the file by capability of operation system -
+    for example: 'ant4c.exe > 1.txt'.
 
  -- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..
 
